<resources>
    <string name="app_name">ChatMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="let_s_chat">Let\'s Chat!</string>
    <string name="e_mail">E-mail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="log_out">Log out</string>
</resources>