<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/sea_background"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_round"
            android:inputType="text"
            android:fontFamily="@font/andika"
            android:textColor="@color/white"
            android:hint="@string/username"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_round"
            android:inputType="text"
            android:fontFamily="@font/andika"
            android:textColor="@color/white"
            android:hint="@string/e_mail"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_round"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:fontFamily="@font/andika"
            android:hint="@string/password"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/let_s_chat"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/andika" />

        <TextView
            android:id="@+id/goToAuthorization"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/my_red"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>